TestSuite/errors/err0076.pas
  	 uses System;

var
  n: void;
  
begin

end.